Socket.IO is working with AMQP

--- a/node-socket-io-amqp/client.html
+++ b/node-socket-io-amqp/client.html
@@ -39,6 +39,10 @@
           console.log('disconnecting to server') 
         });
         
+        socket.on('received', function(data){
+          console.log(data);
+        });
+        
         socket.on('message', function(data){
           console.log(data);
         });
